cna-next/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cna-web
spec:
  type: ClusterIP
  selector:
    app: cna-web
  ports:
    - port: 3000  # SERVICE exposed port
      name: http  # SERVICE port name
      protocol: TCP  # The protocol the SERVICE will listen to
      targetPort: 3000
